name:                drstun
version:             0.1.0.0
synopsis:            Dr. STUN. A STUN Server
description:         Please see README.md
homepage:            https://github.com/HowNetWorks/drstun#readme
bug-reports:         https://github.com/HowNetWorks/drstun/issues
license:             MIT
license-file:        LICENSE
author:              Ossi Herrala
maintainer:          devnull@hownetworks.io
copyright:           2016 HowNetWorks Oy
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:              git
  location:          https://github.com/HowNetWorks/drstun

executable drstun
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts=-N -rtsopts
  build-depends:       base
                     , stun
                     , network

test-suite hlint
  hs-source-dirs:      test
  main-is:             HLint.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , hlint
